Task 5: Add DetailedFraudDetectionJob class to integrate enhanced fraud detection system. Update README.md with implementation details and usage instructions for the complete location-based fraud detection pipeline.